objects/Case_Runner__c.object
<CustomObject>
    <fields>
        <fullName>Runner_Reason__c</fullName>
        <description>To report and track why Cases are being sent back.</description>
        <inlineHelpText>Why is this Case being redirected?</inlineHelpText>
        <label>Runner Reason</label>
        <picklist>
            <controllingField>Runner_Action__c</controllingField>
            <picklistValues>
                <fullName>Cannot Reproduce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Dev Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QC Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working Notes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Runner_Request__c</fullName>
        <label>Runner Request</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Runner_Value__c</fullName>
        <formula>CASE( Runner_Action__c , &quot;Escalate&quot;, 1, 
&quot;Resolved&quot;, -1,
1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that assigns a value to a case runner for reporting.</inlineHelpText>
        <label>Runner Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Set_Case_Type__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=01570000001U7SB&quot;, &quot;Case Type&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Set Case Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution</label>
        <referenceTo>Solution</referenceTo>
        <relationshipLabel>Case Runners</relationshipLabel>
        <relationshipName>Case_Runners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <inlineHelpText>enter the template number</inlineHelpText>
        <label>Template #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Time__c</fullName>
        <inlineHelpText>time must be entered in 15 minutes increments:  15 minutes = .25, 30 minutes = .50, 45 minutes = .75, 1 hour = 1.00, 1 hr, 15 minutes = 1.25, etc.</inlineHelpText>
        <label>Case Time</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL_Location_of_Error__c</fullName>
        <inlineHelpText>Please input the URL address of the website in question from your browser&apos;s address bar. Required for escalations to Website Support.</inlineHelpText>
        <label>URL Location of Error</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <formula>Case__r.Location_of_Error_Issue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unresolve_Result__c</fullName>
        <description>Used for Haystak reporting purposes.</description>
        <label>Unresolve Result</label>
        <picklist>
            <picklistValues>
                <fullName>Error</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Mistake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error - Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error - AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <description>Haystak Width</description>
        <label>Width</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Case Runner</label>
    <nameField>
        <displayFormat>CR-{YYYY}{MM}-{0}</displayFormat>
        <label>Case Runner Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Runners</pluralLabel>
    <recordTypes>
        <fullName>Assign</fullName>
        <active>true</active>
        <description>case runner used for assigning cases</description>
        <label>Assign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Compliance</fullName>
        <active>true</active>
        <description>Haystak Compliance Tracking</description>
        <label>Compliance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Escalate</fullName>
        <active>true</active>
        <description>case runner used for escalating cases</description>
        <label>Escalate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Escalate_Newbie</fullName>
        <active>true</active>
        <description>does not allow escalation to any team except team leads</description>
        <label>Escalate (Newbie)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Escalate_support_L1_view</fullName>
        <active>false</active>
        <description>This is set up to prevent Support L1 &amp; L2 from escalating direct to development</description>
        <label>Escalate (support L1 view)</label>
    </recordTypes>
    <recordTypes>
        <fullName>HayStak_QC</fullName>
        <active>true</active>
        <label>HayStak QC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Post_to_Web</fullName>
        <active>true</active>
        <description>Used by Haystak for SEO QA &amp; Activation</description>
        <label>Post to Web</label>
    </recordTypes>
    <recordTypes>
        <fullName>QA_Close</fullName>
        <active>true</active>
        <description>QA &amp; Close with QA Notes not resolve notes</description>
        <label>QA &amp; Close</label>
    </recordTypes>
    <recordTypes>
        <fullName>Request_More_Info</fullName>
        <active>true</active>
        <description>case runner used for requesting more info for cases</description>
        <label>Request More Info</label>
    </recordTypes>
    <recordTypes>
        <fullName>Resolve</fullName>
        <active>true</active>
        <description>case runner used for resolving cases</description>
        <label>Resolve</label>
    </recordTypes>
    <recordTypes>
        <fullName>Resolve_Level_1_2</fullName>
        <active>true</active>
        <label>Resolve (Level 1/2)</label>
    </recordTypes>
    <recordTypes>
        <fullName>SF_Assign</fullName>
        <active>true</active>
        <description>Used for assigning Salesforce cases.</description>
        <label>SF Assign</label>
    </recordTypes>
    <recordTypes>
        <fullName>SF_Escalate</fullName>
        <active>true</active>
        <description>Used for escalating Salesforce cases.</description>
        <label>SF Escalate</label>
    </recordTypes>
    <recordTypes>
        <fullName>SF_Resolve</fullName>
        <active>true</active>
        <description>Used for resolving Salesforce cases.</description>
        <label>SF Resolve</label>
    </recordTypes>
    <recordTypes>
        <fullName>Send_for_QA</fullName>
        <active>true</active>
        <description>Used by L3 support to send resolved Case back to prior queue for QA and Close</description>
        <label>Send for QA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Submit_More_Info</fullName>
        <active>true</active>
        <description>case runner used for submitting more info for cases</description>
        <label>Submit More Info</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unresolve</fullName>
        <active>true</active>
        <description>case runner used for unresolving cases</description>
        <label>Unresolve</label>
    </recordTypes>
    <recordTypes>
        <fullName>vAuto_Escalate</fullName>
        <active>true</active>
        <description>Escalate Record Type for vAuto Support</description>
        <label>vAuto Escalate</label>
    </recordTypes>
    <recordTypes>
        <fullName>vAuto_Resolve</fullName>
        <active>true</active>
        <description>Used to Resolve vAuto Cases</description>
        <label>vAuto Resolve</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Assignment_Needs_Escalation</fullName>
        <active>true</active>
        <description>Case must be escalated before it can be assigned.</description>
        <errorConditionFormula>ISBLANK(TEXT(Case__r.Escalate_To__c)) &amp;&amp; 
!ISBLANK(Assigned_To__c)</errorConditionFormula>
        <errorMessage>The case must be escalated before it can be assigned.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Can_Not_Change_Unresolved_Result</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Unresolve_Result__c) 
&amp;&amp;
!OR( 
$User.Username = &quot;justin.smith@haystak.com&quot;,
$User.Username = &quot;david.goldstein@haystak.com&quot;
)</errorConditionFormula>
        <errorDisplayField>Unresolve_Result__c</errorDisplayField>
        <errorMessage>You are not authorized to change the value of this field to anything other than &quot;Error.&quot;  Please see David Goldstein or Justin Smith for assistance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Escalate_to_Dev_If_No_Prior</fullName>
        <active>true</active>
        <description>Cannot use the escalate case runner sending to Development if it has not previously been escalated to another queue.</description>
        <errorConditionFormula>ISPICKVAL(Escalated_To__c, &quot;Development&quot;) &amp;&amp;
ISBLANK(TEXT( Case__r.Escalate_To__c ))</errorConditionFormula>
        <errorMessage>You cannot escalate to Development until you have escalated to another queue first. This is likely going to be your own queue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Submit_Additional_info_unless_req</fullName>
        <active>true</active>
        <description>Users will not be able to submit additional information unless it has been requested</description>
        <errorConditionFormula>TEXT(Case__r.Status) != &quot;Additional Information Needed&quot; &amp;&amp;
TEXT(Runner_Action__c) = &quot;Submitting Additional Information&quot; &amp;&amp;
$Profile.Name != &quot;VinSystem Dev Admin&quot;</errorConditionFormula>
        <errorMessage>Additional Information has not been requested.  Please submit your information using the &quot;Comment&quot; case runner button.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Esc_To_DMS</fullName>
        <active>true</active>
        <description>Must have Escalation Type set if escalating to L2-Integration</description>
        <errorConditionFormula>ISPICKVAL(Escalated_To__c, &quot;L2-Integration&quot;) &amp;&amp; 
ISBLANK(TEXT(Escalation_Type__c))</errorConditionFormula>
        <errorDisplayField>Escalation_Type__c</errorDisplayField>
        <errorMessage>Escalation Type Must Be Selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Esc_to_L2_Supervisor</fullName>
        <active>true</active>
        <description>The Runner Request field must be filled out before escalating to L2-Supervisor.</description>
        <errorConditionFormula>ISPICKVAL(Escalated_To__c, &quot;L2-Supervisor&quot;) &amp;&amp; 
ISBLANK(Runner_Request__c)</errorConditionFormula>
        <errorDisplayField>Runner_Request__c</errorDisplayField>
        <errorMessage>You must enter information into the Runner Request field before escalating to L2-Supervisor</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Esc_to_L3_Support</fullName>
        <active>true</active>
        <description>if Esc to L# Support  then Esc Type required</description>
        <errorConditionFormula>ISPICKVAL(Escalated_To__c, &quot;L3 Support&quot; ) &amp;&amp; 
ISBLANK(TEXT(Escalation_Type__c))</errorConditionFormula>
        <errorDisplayField>Escalation_Type__c</errorDisplayField>
        <errorMessage>The Escalation Type must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Exports_3rd_Party_Validation</fullName>
        <active>true</active>
        <description>Must have 3rd party filled in to escalate to exports</description>
        <errorConditionFormula>ISBLANK(Case__r.Third_Party__c) &amp;&amp; 
ISPICKVAL(Escalated_To__c, &quot;L2-Exports&quot;)</errorConditionFormula>
        <errorMessage>Third Party must be selected before escalating to Exports Queue</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HY_Campaign_Creative_Type_Required</fullName>
        <active>true</active>
        <description>if the escalation type = Ad copy Change/New Campaign Creation/Current Campaign Mofications, then the Haystak Campaign/Creative type is required</description>
        <errorConditionFormula>OR(
   ISPICKVAL( Escalation_Type__c , &quot;Ad Copy Changes&quot;), 
   ISPICKVAL( Escalation_Type__c , &quot;New Campaign Creation&quot;),
   ISPICKVAL( Escalation_Type__c , &quot;Current Campaign Modifications&quot;)
) &amp;&amp;
ISBLANK(TEXT(Haystak_Campaign_Type__c))</errorConditionFormula>
        <errorMessage>You must select the applicable Haystak Campaign/Creative Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HY_Program_Type_Equals_Chrysler</fullName>
        <active>true</active>
        <description>Promotion and Template must be filled in for Chrysler Programs</description>
        <errorConditionFormula>ISPICKVAL(Program_Type__c,&quot;Chrysler&quot;) &amp;&amp;
OR(
   ISBLANK(TEXT(Promotion__c)),
   ISBLANK(Template__c)
)</errorConditionFormula>
        <errorMessage>Please fill in the Promotion and Template for Chrysler Programs.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Unresolves_After_96_Hours</fullName>
        <active>true</active>
        <description>Prevents any Unresolve Case Runners after the Case has been closed for 96 hours.</description>
        <errorConditionFormula>OR(
   Case__r.ClosedDate + 96 &lt; NOW() &amp;&amp;
   ISPICKVAL(Runner_Action__c, &quot;Unresolved&quot;) &amp;&amp;
   ISNEW()
,
   Case__r.ClosedDate + 96 &lt; NOW() &amp;&amp;
   ISPICKVAL(Runner_Action__c, &quot;Unresolved&quot;) &amp;&amp;
   ISCHANGED(Runner_Action__c)
) &amp;&amp; 
NOT ( OR(
   $User.UserRoleId = &quot;00E70000001GBsB&quot;, /*Senior Business Analyst*/
   $User.UserRoleId = &quot;00E70000001GJu5&quot;, /*CRM Systems Administrator*/
   $User.UserRoleId = &quot;00E70000001GFEU&quot;, /*Customer Service Representative*/
   $User.UserRoleId = &quot;00E70000001GE8B&quot;, /*Salesforce Developer*/
   $User.UserRoleId = &quot;00E70000000xpOi&quot;, /*VP of Imp/Supp*/
   $User.UserRoleId = &quot;00E70000000wHfc&quot; /*Director of Support*/
) )</errorConditionFormula>
        <errorMessage>You are not permitted to Unresolve this Case at this time. Please see Vin Support Leadership to Unresolve this Case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PM_Can_Only_Escalate_to_Team_Lead</fullName>
        <active>true</active>
        <description>Prevents the PM from escalating a Case to anywhere other than the L1-Supervisor queue.</description>
        <errorConditionFormula>$UserRole.DeveloperName = &quot;VinPro&quot; &amp;&amp;  
!ISPICKVAL( Escalated_To__c , &quot;L1-Supervisor&quot;)</errorConditionFormula>
        <errorDisplayField>Escalated_To__c</errorDisplayField>
        <errorMessage>As a Performance Manager, you are only authorized to escalate to the L1-Supervisor queue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Questions_must_be_answered</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
   AND(
      LEN(Case__r.X1_What_is_happening__c) &lt; 10,
      LEN(Case__r.X1_What_is_happening__c) &gt; 0
   ),
   AND(
      LEN(Case__r.X2_What_did_you_expect_to_happen__c) &lt; 10,
      LEN(Case__r.X2_What_did_you_expect_to_happen__c) &gt; 0
   ),
   AND(
      LEN(Case__r.X3_When_did_it_start_happening__c ) &lt; 5,
      LEN(Case__r.X3_When_did_it_start_happening__c ) &gt; 0
   ),
   AND(
      LEN(Case__r.X4_What_do_you_think_the_problem_is__c) &lt; 10,
      LEN(Case__r.X4_What_do_you_think_the_problem_is__c) &gt; 0
   ),
   AND(
      LEN(Case__r.X5_What_have_you_tried_so_far__c ) &lt; 10,
      LEN(Case__r.X5_What_have_you_tried_so_far__c) &gt; 0
   )
) &amp;&amp;
Case__r.Grandfathered_Exception__c != TRUE &amp;&amp;
Case__r.IsChild__c != &quot;TRUE&quot; &amp;&amp;
ISPICKVAL(Escalation_Type__c, &quot;Feature Request&quot;) &amp;&amp;
ISPICKVAL(Escalation_Type__c, &quot;Emergency Feature Request&quot;) &amp;&amp;
OR(
   ISPICKVAL(Escalated_To__c, &quot;L3 Support&quot;), 
   ISPICKVAL(Escalated_To__c, &quot;Level 2-Dev&quot;)
)</errorConditionFormula>
        <errorMessage>All 5 Questions must ACTUALLY be answered to escalate a case. (Try using complete sentences.)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Specific_Time_Values</fullName>
        <active>true</active>
        <description>Requires a time value split into 15 minute intervals</description>
        <errorConditionFormula>CONTAINS ( TEXT( Ticket_Time__c ), &quot;.&quot;) &amp;&amp;
NOT (OR ( 
      RIGHT( TEXT( Ticket_Time__c ), 2) == &quot;.0&quot;, 
      RIGHT( TEXT( Ticket_Time__c ), 2) == &quot;.5&quot;, 
      RIGHT( TEXT( Ticket_Time__c ), 3) == &quot;.00&quot;, 
      RIGHT( TEXT( Ticket_Time__c ), 3) == &quot;.25&quot;, 
      RIGHT( TEXT( Ticket_Time__c ), 3) == &quot;.50&quot;, 
      RIGHT( TEXT( Ticket_Time__c ), 3) == &quot;.75&quot;
) )</errorConditionFormula>
        <errorDisplayField>Ticket_Time__c</errorDisplayField>
        <errorMessage>Must end with .00, .25, .50, or .75.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_URL_on_escalation_to_Websites</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Escalated_To__c, &quot;Website Support&quot;) &amp;&amp; 
ISBLANK(URL_Location_of_Error__c)</errorConditionFormula>
        <errorMessage>You must enter the URL location of the error before you can escalate to Website Support.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Escalate_to_DMS</fullName>
        <active>false</active>
        <description>Restricts the Escalated to field. Cannot change it to L2-Integration unless you are a L2, Support Team Lead, Support Queue Lead, Support Team Manager, VP of Imp/Support, Sr Web Support Developer, part of the SF Team, or other specified users.</description>
        <errorConditionFormula>ISPICKVAL( Escalated_To__c , &quot;L2-Integration&quot;) &amp;&amp;
NOT ( OR(
         $User.UserRoleId = &quot;00E70000001GBsB&quot;, /*Senior Business Analyst*/
         $User.UserRoleId = &quot;00E70000001GJu5&quot;, /*CRM Systems Administrator*/
         $User.UserRoleId = &quot;00E70000001GFEU&quot;, /*Customer Service Representative*/
         $User.UserRoleId = &quot;00E70000001GE8B&quot;, /*Salesforce Developer*/
         $User.UserRoleId = &quot;00E70000001GxcF&quot;, /*Director of Support*/
         $User.UserRoleId = &quot;00E70000000wHfc&quot;, /*Support Team Managers*/
         $User.UserRoleId = &quot;00E70000000xpOi&quot;, /*Jim*/
         $User.UserRoleId = &quot;00E70000001GJsJ&quot;, /*Website Support Manager*/
         $User.UserRoleId = &quot;00E70000001GHig&quot;, /*Support Team Leads*/
         $User.UserRoleId = &quot;00E70000001Gbqe&quot;, /*DMS Team Lead*/
         $User.UserRoleId = &quot;00E70000001GaHT&quot;, /*Director of Implementation*/
         $User.UserRoleId = &quot;00E70000001GNIP&quot;, /*Implementation Team Leads*/
         $User.UserRoleId = &quot;00E70000001GQc3&quot;, /*VinPro Managers*/
         $User.UserRoleId = &quot;00E70000001GmnW&quot;, /*Integration Team Leads*/
         $User.UserRoleId = &quot;00E70000001GzT0&quot;, /*Sr Integration*/
         $User.UserRoleId = &quot;00E70000001Gbqj&quot;, /*DMS Support*/
         $User.UserRoleId = &quot;00E70000001GcfN&quot;, /*Senior Support Trainer*/
         $User.UserRoleId = &quot;00E70000001H9HT&quot;, /*Support Trainer*/
         $User.UserRoleId = &quot;00E70000001GEeg&quot;, /*Website Support*/
         $User.ProfileId = &quot;00e70000001File&quot;, /*VinCare Leads profile*/
        $User.ProfileId = &quot;00e70000001FjhJ&quot;, /*CTV VinCare Leads profile*/ 
         $User.ProfileId = &quot;00e70000001Filo&quot;, /*VinCare L2 profile*/
        $User.Id = &quot;00570000001duWL&quot;, /*Keerthi Gaggenapally*/
        $User.Id = &quot;00570000001dpFQ&quot; /*Manasa Murakonda*/
) )</errorConditionFormula>
        <errorDisplayField>Escalated_To__c</errorDisplayField>
        <errorMessage>Only a L2 or higher can escalate to L2-Integration. Certain exceptions apply.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Escalate_to_Dev</fullName>
        <active>false</active>
        <description>Restricts the Escalated to field.</description>
        <errorConditionFormula>ISPICKVAL( Escalated_To__c , &quot;Development&quot;) &amp;&amp; 
NOT ( OR( 
$User.UserRoleId = &quot;00E70000001GBsB&quot;, /*Senior Business Analyst*/ 
$User.UserRoleId = &quot;00E70000001GJu5&quot;, /*CRM Systems Administrator*/ 
$User.UserRoleId = &quot;00E70000001GE8B&quot;, /*Salesforce Developer*/ 
$User.ProfileId = &quot;00e70000001FaWM&quot;, /*VinSystem Dev Admin*/ 
$User.Username = &quot;matt.bench@vinstickers.com&quot;,
$User.Username = &quot;michelle.hoppe@vinsolutions.com&quot;,
$User.Username = &quot;david.tinsley@vinsolutions.com&quot;,
$User.Username = &quot;manasa.murakonda@vinsolutions.com&quot;,
$User.Username = &quot;keerthi.gaggenapally@vinsolutions.com&quot;,
$User.Username = &quot;patrick.schippers@vinsolutions.com&quot;,
$User.Username = &quot;martin.cooke@vinsolutions.com&quot;,
$User.Username = &quot;dwatson@vinsolutions.com&quot;,
$User.Username = &quot;grant.scarfino@vinsolutions.com&quot;,
$User.Username = &quot;michael.whittlesey@vinsolutions.com&quot;,
$User.Username = &quot;colin.barnes@vinsolutions.com&quot;,
$User.Username = &quot;k.richert@vinsolutions.com&quot;,
$User.Username = &quot;travis.douglas@vinsolutions.com&quot;,
$User.Username = &quot;ray.levi@vinsolutions.com&quot;,
$User.Username = &quot;ken.wiebke@vinsolutions.com&quot;,
$User.Username = &quot;mike@vinsolutions.com&quot;,
$User.Username = &quot;jwolfer@vinsolutions.com&quot;,
$User.Username = &quot;mohamoud.ali@vinsolutions.com&quot;,
$User.Username = &quot;caryn.hefferren@vinsolutions.com&quot;,
$User.Username = &quot;tom.bennett@vinsolutions.com&quot;,
$User.Username = &quot;alex.raymond@vinsolutions.com&quot;,
$User.Username = &quot;thomas.butler@vinsolutions.com&quot;,
$User.Username = &quot;jason.hale@vinsolutions.com&quot;,
$User.Username = &quot;justin.blankenship@vinsolutions.com&quot;,
$User.Username = &quot;karen.resco@vinsolutions.com&quot;,
$User.Username = &quot;brandon.kenig@vinsolutions.com&quot;,
$User.Username = &quot;josh.seichepine@vinsolutions.com&quot;,
$User.Username = &quot;sydney.bowman@vinsolutions.com&quot;,
$User.Username = &quot;jarod.sams@vinsolutions.com&quot;,
$User.Username = &quot;charles.miller@haystak.com&quot;
))</errorConditionFormula>
        <errorDisplayField>Escalated_To__c</errorDisplayField>
        <errorMessage>You do not have authorization to escalate to Development. Please contact your supervisor for assistance or select a different Queue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Escalate_to_Feature_Request</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Escalated_To__c , &quot;Feature Request&quot;) &amp;&amp; 
NOT ( OR( 
$User.UserRoleId = &quot;00E70000001GBsB&quot;, /*Senior Business Analyst*/ 
$User.UserRoleId = &quot;00E70000001GJu5&quot;, /*CRM Systems Administrator*/ 
$User.UserRoleId = &quot;00E70000001GFEU&quot;, /*Customer Service Representative*/ 
$User.UserRoleId = &quot;00E70000001GE8B&quot;, /*Salesforce Developer*/ 
$User.UserRoleId = &quot;00E70000000xpOi&quot;, /*Sr. Director of Performance Management*/ 
$User.Id = &quot;00570000001dxes&quot;, /*Martin Cooke*/
$User.Username = &quot;grant.scarfino@vinsolutions.com&quot;,
$User.Username = &quot;dwatson@vinsolutions.com&quot;,
$User.Id = &quot;00570000002FwSa&quot;, /*Jennifer Lee*/
$User.Id = &quot;00570000002Gjjk&quot;, /*Nakia Graham*/
$User.Id = &quot;00570000001duWL&quot;, /*Keerthi Gaggenapally*/
$User.Id = &quot;00570000001dpFQ&quot; /*Manasa Murakonda*/
) )</errorConditionFormula>
        <errorDisplayField>Escalated_To__c</errorDisplayField>
        <errorMessage>You cannot escalate to this queue. Please speak with Martin Cooke for assistance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Escalate_to_L2_Team_Leads</fullName>
        <active>false</active>
        <description>Restricts the Escalated to field. Cannot change it to L2-Supervisor unless you are a L2, Support Team Lead, Support Queue Lead, Support Team Manager, VP of Imp/Support, Sr Web Support Developer, part of the SF Team, or other specified users.</description>
        <errorConditionFormula>ISPICKVAL( Escalated_To__c , &quot;L2-Supervisor&quot;) &amp;&amp;
NOT ( OR(
         $User.UserRoleId = &quot;00E70000001GBsB&quot;, /*Senior Business Analyst*/
         $User.UserRoleId = &quot;00E70000001GJu5&quot;, /*CRM Systems Administrator*/
         $User.UserRoleId = &quot;00E70000001GFEU&quot;, /*Customer Service Representative*/
         $User.UserRoleId = &quot;00E70000001GE8B&quot;, /*Salesforce Developer*/
         $User.UserRoleId = &quot;00E70000001GxcF&quot;, /*Director of Support*/
         $User.UserRoleId = &quot;00E70000000wHfc&quot;, /*Support Team Managers*/
         $User.UserRoleId = &quot;00E70000000xpOi&quot;, /*Jim*/
         $User.UserRoleId = &quot;00E70000001GJsJ&quot;, /*Website Support Manager*/
         $User.UserRoleId = &quot;00E70000001GHig&quot;, /*Support Team Leads*/
         $User.UserRoleId = &quot;00E70000001Gbqe&quot;, /*DMS Team Lead*/
         $User.UserRoleId = &quot;00E70000001GaHT&quot;, /*Director of Implementation*/
         $User.UserRoleId = &quot;00E70000001GNIP&quot;, /*Implementation Team Leads*/
         $User.UserRoleId = &quot;00E70000001GQc3&quot;, /*VinPro Managers*/
         $User.UserRoleId = &quot;00E70000001GmnW&quot;, /*Integration Team Leads*/
         $User.UserRoleId = &quot;00E70000001GzT0&quot;, /*Sr Integration*/
         $User.UserRoleId = &quot;00E70000001GcfN&quot;, /*Senior Support Trainer*/
         $User.UserRoleId = &quot;00E70000001H9HT&quot;, /*Support Trainer*/
         $UserRole.DeveloperName = &quot;Support_QA&quot;,
         $User.ProfileId = &quot;00e70000001File&quot;, /*VinCare Leads profile*/
         $User.ProfileId = &quot;00e70000001Filo&quot;, /*VinCare L2 profile*/
        $User.Id = &quot;00570000001duWL&quot;, /*Keerthi Gaggenapally*/
        $User.Id = &quot;00570000001dpFQ&quot;, /*Manasa Murakonda*/
$User.Username = &quot;karen.kuzanek@vinsolutions.com&quot;
) )</errorConditionFormula>
        <errorDisplayField>Escalated_To__c</errorDisplayField>
        <errorMessage>Only a L2 or higher can escalate to L2-Supervisor. Certain exceptions apply.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Escalate_to_L3_Analytics</fullName>
        <active>false</active>
        <description>Restricts Escalate to L3 Analytics
CR-00010389
Disabled -  CR-00015443</description>
        <errorConditionFormula>ISPICKVAL( Escalated_To__c , &quot;L3-Analytics&quot;) &amp;&amp; 
NOT ( OR( 
$UserRole.DeveloperName = &quot;Marketing_Account_Manager&quot;, /*Interactive Marketing Account Manager*/
$UserRole.DeveloperName = &quot;WebsiteSupportManager&quot;, /*Website Support Manager*/ 
$User.Username = &quot;sebastien.dufourmantelle@vinsolutions.com&quot;, /*Sebastien Dufourmantelle*/ 
$User.Username = &quot;caryn.hefferren@vinsolutions.com&quot;, /*Caryn Hefferren*/
$User.Username = &quot;kyle.cohen@vinsolutions.com&quot;, /*Kyle Cohen*/
$User.Username = &quot;manasa.murakonda@vinsolutions.com&quot;, /*Manasa Murakonda*/
$User.Username = &quot;cara.mueller@vinsolutions.com&quot;, /*Cara Mueller*/
$User.Username = &quot;sydney.bowman@vinsolutions.com&quot;, /*Sydney Bowman*/
$User.Username = &quot;christina.lahti@vinsolutions.com&quot;, /*Christina Lahti*/
$User.Username = &quot;kam.shafinia@vinsolutions.com&quot;, /*Kam Shafinia*/
$User.Username = &quot;patrick.ahl@vinsolutions.com&quot;, /*Patrick Ahl*/
$User.Username = &quot;brandon.kenig@vinsolutions.com&quot;, /*Brandon Kenig*/
$User.Username = &quot;david.starkweather@vinsolutions.com&quot;, /*David Starkweather*/
$User.Username = &quot;brent.bissell@vinsolutions.com&quot; /*Brent Bissell*/
))</errorConditionFormula>
        <errorDisplayField>Escalated_To__c</errorDisplayField>
        <errorMessage>You are not authorized to escalate to L3-Analytics.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Escalate_to_L3_Support</fullName>
        <active>true</active>
        <description>Restricts Escalate to L3 Support</description>
        <errorConditionFormula>ISPICKVAL( Escalated_To__c , &quot;L3 Support&quot;) &amp;&amp; 
NOT ( OR( 
$UserRole.DeveloperName = &quot;ProcessDevelopmentManager&quot;, /*Business Analyst*/ 
$UserRole.DeveloperName = &quot;SystemsAdministrator&quot;, /*CRM Systems Administrator*/  
$UserRole.DeveloperName = &quot;SalesforceDeveloper&quot;, /*Salesforce Developer*/ 
$UserRole.DeveloperName = &quot;Director_of_Support&quot;, /*Director of Support*/ 
$UserRole.DeveloperName = &quot;SupportTeamManager&quot;, /*Support Team Managers*/ 
$UserRole.DeveloperName = &quot;WebsiteSupportManager&quot;, /*Website Support Manager*/ 
$UserRole.DeveloperName = &quot;SupportTeamLead&quot;, /*Support Team Leads*/ 
$UserRole.DeveloperName = &quot;DirectorofImplementation&quot;, /*Director of Implementation*/ 
$UserRole.DeveloperName = &quot;ImplementationTeamLead&quot;, /*Implementation Team Manager*/ 
$UserRole.DeveloperName = &quot;VinProManager&quot;, /*Manager of Performance Managers*/ 
$UserRole.DeveloperName = &quot;Integration_Team_Lead&quot;, /*Integration Manager*/ 
$UserRole.DeveloperName = &quot;Sr_Integration&quot;, /*Sr Integration Specialist*/ 
$UserRole.DeveloperName = &quot;Corporate_Trainer&quot;, /*Senior Support Trainer*/ 
$UserRole.DeveloperName = &quot;Support_Trainer&quot;, /*Support Trainer*/ 
$UserRole.DeveloperName = &quot;Support_QA&quot;, /* Support QA*/ 
$Profile.Name = &quot;VinCare Leads&quot;,
$Profile.Name = &quot;VinSystem Dev Admin&quot;,
$User.Username = &quot;keerthi.gaggenapally@vinsolutions.com&quot;, /*Keerthi Gaggenapally*/ 
$User.Username = &quot;manasa.murakonda@vinsolutions.com&quot;, /*Manasa Murakonda*/ 
$User.Username = &quot;sebastien.dufourmantelle@vinsolutions.com&quot;, /*Sebastien Dufourmantelle*/ 
$User.Username = &quot;karen.resco@vinsolutions.com&quot;, /*Karen Resco*/
$User.Username = &quot;christina.lahti@vinsolutions.com&quot;, /*Christina Lahti*/ 
$User.Username = &quot;jj@vinsolutions.com&quot;, /*JJ Brownlee*/ 
$User.Username = &quot;anthony.key@vinsolutions.com&quot;, /*Anthony Key*/ 
$User.Username = &quot;andrew.robison@vinsolutions.com&quot;, /*Andrew Robison*/
$User.Username = &quot;james.griesbach@vinsolutions.com&quot;, /*James Griesbach*/ 
$User.Username = &quot;josiah.mead@vinsolutions.com&quot;, /*Josiah Mead*/
$User.Username = &quot;bryce.skaggs@vinsolutions.com&quot; /*Bryce Skaggs*/
))</errorConditionFormula>
        <errorDisplayField>Escalated_To__c</errorDisplayField>
        <errorMessage>Only a Queue Lead or higher can escalate to L3 Support. Certain exceptions apply.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Escalate_to_Waiting_Outside_Sup</fullName>
        <active>true</active>
        <errorConditionFormula>(ISNEW() || ISCHANGED( Escalated_To__c )) &amp;&amp;
ISPICKVAL( Escalated_To__c, &quot;Waiting - Outside Support&quot;) &amp;&amp; 
NOT ( OR(
         $User.UserRoleId = &quot;00E70000001GBsB&quot;, /*Senior Business Analyst*/
         $User.UserRoleId = &quot;00E70000001GJu5&quot;, /*CRM Systems Administrator*/
         $User.UserRoleId = &quot;00E70000001GFEU&quot;, /*Customer Service Representative*/
         $User.UserRoleId = &quot;00E70000001GE8B&quot;, /*Salesforce Developer*/
         $User.UserRoleId = &quot;00E70000001GxcF&quot;, /*Director of Support*/
         $User.UserRoleId = &quot;00E70000001GHig&quot;, /*Support Team Lead*/
         $User.UserRoleId = &quot;00E70000000wHfc&quot;, /*Support Team Manager*/
         $User.UserRoleId = &quot;00E70000001Sg2H&quot;, /*Support Supervisor*/ 
         $User.Id = &quot;00570000001duWL&quot;, /*Keerthi Gaggenapally*/
         $User.Id = &quot;00570000001dpFQ&quot;, /*Manasa Murakonda*/
         $User.Id = &quot;00570000001enMz&quot; /*Anthony Key*/
))</errorConditionFormula>
        <errorDisplayField>Escalated_To__c</errorDisplayField>
        <errorMessage>You cannot Escalate to this queue. Please see a Support Team Manager for assistance.</errorMessage>
    </validationRules>
</CustomObject>